@@ -630,14 +630,16 @@ getImageSize(ImageCache * cache)
     if (h == 0)
 	h = 1;
     if (cache->width < 0 && cache->height < 0) {
-	cache->width = w;
-	cache->height = h;
+	cache->width = (w > MAX_IMAGE_SIZE) ? MAX_IMAGE_SIZE: w;
+	cache->height = (h > MAX_IMAGE_SIZE) ? MAX_IMAGE_SIZE: h;
     }
     else if (cache->width < 0) {
-	cache->width = (int)((double)cache->height * w / h + 0.5);
+        int tmp = (int)((double)cache->height * w / h + 0.5);
+	cache->width = (tmp > MAX_IMAGE_SIZE) ? MAX_IMAGE_SIZE: tmp;
     }
     else if (cache->height < 0) {
-	cache->height = (int)((double)cache->width * h / w + 0.5);
+        int tmp = (int)((double)cache->width * h / w + 0.5);
+	cache->height = (tmp > MAX_IMAGE_SIZE) ? MAX_IMAGE_SIZE: tmp;
     }
     if (cache->width == 0)
 	cache->width = 1;
